feat(content): implement persistence layer